# sentrux

./: .gitignore  .gitmodules  Cargo.toml  README.de.md  README.ja.md  README.md  README.zh-CN.md  install.sh
.github/workflows/: build-grammars.yml  ci.yml  release.yml
plugins/csharp/: plugin.toml
plugins/csharp/queries/: tags.scm
plugins/dart/queries/: tags.scm
plugins/java/: plugin.toml
plugins/javascript/: plugin.toml
plugins/kotlin/: plugin.toml
plugins/php/: plugin.toml
plugins/php/queries/: tags.scm
plugins/python/: plugin.toml
plugins/rust/: plugin.toml
plugins/swift/: plugin.toml
plugins/swift/queries/: tags.scm
plugins/typescript/: plugin.toml
sentrux-bin/: Cargo.toml
sentrux-bin/src/: lib.rs  main.rs  main_impl.rs
sentrux-core/: Cargo.toml  build.rs
sentrux-core/src/: lib.rs  pro_registry.rs
sentrux-core/src/analysis/: entry_points.rs  lang_registry.rs
sentrux-core/src/analysis/parser/: ast_import_test.rs  captures.rs  imports.rs  lang_extractors.rs  tests2.rs
sentrux-core/src/analysis/plugin/: embedded.rs  loader.rs  manifest.rs  mod.rs  profile.rs
sentrux-core/src/analysis/resolver/: helpers.rs  suffix.rs
sentrux-core/src/analysis/scanner/: mod.rs  rescan.rs
sentrux-core/src/app/: channels.rs  draw_panels.rs  mod.rs  scan_threads.rs  scanning.rs  scanning_tests.rs  status_bar.rs  toolbar.rs  update_loop.rs
sentrux-core/src/app/mcp_server/: handlers.rs  handlers_evo.rs  registry.rs
sentrux-core/src/app/panels/: activity_panel.rs  file_detail.rs  health_display.rs  language_summary.rs  metrics_panel.rs  mod.rs  ui_helpers.rs
sentrux-core/src/metrics/: grading.rs  mod.rs  mod_tests.rs  mod_tests2.rs  root_causes.rs  stability.rs  types.rs
sentrux-core/src/metrics/arch/: distance.rs  mod.rs  tests.rs  tests2.rs
sentrux-core/src/queries/php/: tags.scm
sentrux-core/src/queries/swift/: tags.scm
sentrux-core/src/renderer/: colors.rs  rects.rs
