[package]
name = "sentrux"
version = "0.1.0"
edition = "2021"
description = "Live codebase visualization and structural quality gate for AI-agent-written code"
license = "MIT"
repository = "https://github.com/sentrux/sentrux"
homepage = "https://sentrux.dev"

[[bin]]
name = "sentrux"
path = "src/main.rs"

[dependencies]
sentrux-core = { path = "../sentrux-core" }
eframe = { workspace = true }
egui = { workspace = true }

[features]
default = []
pro = ["sentrux-core/pro"]  # Pro tools provided by separate sentrux-pro crate
