[package]
name = "sentrux"
version = "0.4.10"
edition = "2021"
description = "Live codebase visualization and structural quality gate for AI-agent-written code"
license = "MIT"
repository = "https://github.com/sentrux/sentrux"
homepage = "https://github.com/sentrux/sentrux"

[lib]
name = "sentrux_bin"
path = "src/lib.rs"

[[bin]]
name = "sentrux"
path = "src/main.rs"

[dependencies]
sentrux-core = { path = "../sentrux-core" }
clap = { version = "4", features = ["derive"] }
eframe = { workspace = true }
egui = { workspace = true }

[features]
default = []
pro = ["sentrux-core/pro", "dep:sentrux-pro"]

[dependencies.sentrux-pro]
path = "../../sentrux-pro"
optional = true
