[package]
name = "sentrux-core"
version = "0.1.0"
edition = "2021"
description = "Core library for sentrux — structural quality analysis engine"
license = "MIT"
repository = "https://github.com/sentrux/sentrux"
homepage = "https://sentrux.dev"
keywords = ["code-quality", "architecture", "visualization", "mcp", "treemap"]
categories = ["development-tools", "visualization"]

[dependencies]
eframe = { workspace = true }
serde_json = "1"
egui = { workspace = true }
rfd = "0.15"
crossbeam-channel = "0.5"
rayon = "1"
ignore = "0.4"
tokei = "12"
dashmap = "6"
notify = "7"
notify-debouncer-mini = "0.5"
git2 = "0.20"
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-scss = "1.0"
tree-sitter-swift = "0.7"
tree-sitter-kotlin = "0.3"
tree-sitter-lua = "0.5"
tree-sitter-scala = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-haskell = "0.23"
tree-sitter-zig = "1"
tree-sitter-r = "1"
tree-sitter-dockerfile = "0.2"
tree-sitter-ocaml = "0.24"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
regex = "1"
streaming-iterator = "0.1.9"
oxc_resolver = "11"

[features]
default = []
pro = []  # Activated by sentrux-pro crate via sentrux-bin
