[package]
name = "sentrux-core"
version = "0.4.10"
edition = "2021"
description = "Core library for sentrux — structural quality analysis engine"
license = "MIT"
repository = "https://github.com/sentrux/sentrux"
homepage = "https://github.com/sentrux/sentrux"
keywords = ["code-quality", "architecture", "visualization", "mcp", "treemap"]
categories = ["development-tools", "visualization"]

[dependencies]
eframe = { workspace = true }
serde_json = "1"
egui = { workspace = true }
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }
crossbeam-channel = "0.5"
rayon = "1"
ignore = "0.4"
dashmap = "6"
notify = "7"
notify-debouncer-mini = "0.5"
git2 = "0.20"
tree-sitter = "0.25"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
quick-xml = "0.37"
serde_yaml = "0.9"
thiserror = "2"
streaming-iterator = "0.1.9"
libloading = "0.8"
dirs = "6"

[features]
default = []
pro = []  # Activated by sentrux-pro crate via sentrux-bin
